# WarrenBOTfett

./: .gitignore  README.md  dashboard.py  dashboard_current_news.py  dev.py  example_pydantic.py  format.sh  generate_pydantic_models.sh  main.py  pyproject.toml  write_sp500_performance_analysis.py
.devcontainer/: devcontainer.json
.github/workflows/: daily_query_streamlit_app.yaml  run_main.yaml  run_performance_analysis.yaml
.logfire/: logfire_credentials.json
warrenbotfett/: common.py  models.py
warrenbotfett/agents/: news_collection.py
warrenbotfett/api/: account.py  instruments.py  orders.py  portfolio.py  yf.py
warrenbotfett/db/: read.py  write.py
warrenbotfett/executors/: trading212.py
warrenbotfett/systempromts/: prompt2.txt
warrenbotfett/utils/: secrets.py
