[project]
name = "warrenbotfett"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "autoflake>=2.3.1",
    "cloudscraper>=1.2.71",
    "datamodel-code-generator>=0.31.2",
    "diskcache>=5.6.3",
    "dotenv>=0.9.9",
    "google-genai>=1.20.0",
    "googlesearch-python>=1.3.0",
    "isort>=6.0.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-google-genai>=2.1.5",
    "langchain-google-vertexai>=2.0.26",
    "langchain-openai>=0.3.27",
    "langchain-tavily>=0.2.4",
    "langgraph>=0.5.0",
    "logfire[requests]>=3.21.2",
    "newspaper3k>=0.2.8",
    "playwright>=1.54.0",
    "plotly>=6.2.0",
    "pydantic-ai-slim[duckduckgo,tavily]>=0.3.4",
    "pydantic-ai[logfire]>=1.0.1",
    "pyright>=1.1.402",
    "readability-lxml>=0.8.4.1",
    "requests>=2.32.4",
    "ruff>=0.12.1",
    "streamlit>=1.46.1",
    "supabase>=2.16.0",
    "trafilatura>=2.0.0",
    "yfinance>=0.2.65",
]


[tool.setuptools]
packages = ["compass"]
